# rust-math

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: default.toml
crates/corridor_core/src/: lib.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/encodings/: alpha_hex.rs
src/math/: backend.rs  differentiate.rs  evaluate.rs  matrix.rs  mod.rs  ode.rs  parse.rs  simplify.rs
src/models/: api.rs
src/quantum/: mod.rs  state.rs
src/routes/: meta.rs  mod.rs  numeric.rs  numeric_ode.rs  symbolic.rs  theory.rs
src/telemetry/: mod.rs  tracing.rs
src/theory/: logic.rs  mod.rs  proof_obj.rs  prover.rs
